--adding new health route to grab 4 combinations of obesity data for bar chart on the front end
