# controllers/health-controllers.js
@@ -1,4 +1,5 @@
 const getMortalityData = require("../services/health-mortality");
+const getObesityData = require("../services/health-nutrition");
 
 const getRegionalMortalityData = async (req, res) => {
   //TODO: remove this default region value that appeases Swagger
@@ -11,6 +12,13 @@ const getRegionalMortalityData = async (req, res) => {
   return results;
 };
 
+const getObesityDataByGender = async (req, res) => {
+  const results = await getObesityData();
+
+  return results;
+};
+
 module.exports = {
-  getRegionalMortalityData
+  getRegionalMortalityData,
+  getObesityDataByGender
 };
