# routes/health-routes.js
@@ -3,9 +3,15 @@ const router = express.Router();
 const controller = require("../controllers/health-controllers");
 
 router.get("/health/mortality/:region", async (req, res) => {
-  const health = await controller.getRegionalMortalityData(req, res);
+  const mortalityData = await controller.getRegionalMortalityData(req, res);
 
-  res.send(health);
+  res.send(mortalityData);
+});
+
+router.get("/health/nutrition", async (req, res) => {
+  const nutritionData = await controller.getObesityDataByGender(req, res);
+
+  res.send(nutritionData);
 });
 
 module.exports = router;
